--- a/src/common/Header.module.css
+++ b/src/common/Header.module.css
@@ -1,7 +1,32 @@
-.current {
-	display: none;
+.header {
+	background-color: yellowgreen;
+}
+
+.header h2 {
+	margin: 0;
+}
+
+.navBar {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	background-color: turquoise;
+	padding: 0 1rem;
 }
 
 .navItem {
 	margin: .5rem;
+}
+
+.logout {
+	cursor: pointer;
+	background: rebeccapurple;
+	padding: .25rem 1rem;
+	border-radius: 10rem;
+	font-style: italic;
+	color: white;
+}
+
+.current {
+	display: none;
 }
